Fixed x-scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-html {
-  overflow: hidden;
+html::-webkit-scrollbar {
+  // overflow-x: hidden;
 }
 
 * {
