--- a/src/components/styles/Main.scss
+++ b/src/components/styles/Main.scss
@@ -1,6 +1,5 @@
 .wrapper {
   width: 100%;
-
   &::before,
   &::after {
     content: '';
@@ -15,7 +14,7 @@
       rgba(216, 46, 8, 0.126),
       rgba(62, 7, 189, 0.126)
     );
-    width: 100vw;
+    width: 100%;
     height: 100%;
   }
 
